syntax = "proto3";
package proto;

option go_package = "github.com/vmware-tanzu/octant/pkg/plugin/api/proto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

message Empty {}

message KeyRequest {
    string namespace = 1;
    string apiVersion = 2;
    string kind = 3;
    string name = 4;
    google.protobuf.BytesValue labelSelector = 5;
}

message ListResponse {
    repeated bytes objects = 1;
}

message GetResponse {
    bytes object = 1;
}

message UpdateRequest {
    bytes object = 1;
}

message UpdateResponse {

}

message CreateRequest {
    bytes object = 1;
}

message CreateResponse {

}

message ApplyYAMLRequest {
    string namespace = 1;
    string yaml = 2;
}

message ApplyYAMLResponse {
    repeated string resources = 1;
}

message DeleteResponse {

}

message PortForwardRequest {
    string namespace = 1;
    string podName = 2;
    string containerName = 3;
    uint32 portNumber = 4;
}

message PortForwardResponse {
    string portForwardID = 1;
    uint32 portNumber = 2;
}

message CancelPortForwardRequest {
    string portForwardID = 1;
}

message NamespacesResponse {
    repeated string namespaces = 1;
}

message AlertRequest {
    string type = 1;
    string message = 2;
    google.protobuf.Timestamp expiration = 3;
    string clientID = 4;
}

message LinkResponse {
    string ref = 1;
}

message EventRequest {
    string clientID = 1;
    string eventName = 2;
    bytes payload = 3;
}

message EventResponse {

}

service Dashboard {
    rpc List(KeyRequest) returns (ListResponse);
    rpc Get(KeyRequest) returns (GetResponse);
    rpc Update(UpdateRequest) returns (UpdateResponse);
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc ApplyYAML(ApplyYAMLRequest) returns (ApplyYAMLResponse);
    rpc Delete(KeyRequest) returns (DeleteResponse);
    rpc PortForward(PortForwardRequest) returns (PortForwardResponse);
    rpc CancelPortForward(CancelPortForwardRequest) returns (Empty);
    rpc ListNamespaces(Empty) returns (NamespacesResponse);
    rpc ForceFrontendUpdate(Empty) returns(Empty);
    rpc SendAlert(AlertRequest) returns(Empty);
    rpc CreateLink(KeyRequest) returns(LinkResponse);
    rpc SendEvent(EventRequest) returns(EventResponse);
}
